src/objects/APTS_Pricing_Staging__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Sales_Unit__c</fullName>
        <description>Sales unit associated to the Product Staging record.</description>
        <label>Sales Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ODM</fullName>
                </value>
                <value>
                    <fullName>OOB</fullName>
                </value>
                <value>
                    <fullName>M-2</fullName>
                </value>
                <value>
                    <fullName>TC3</fullName>
                </value>
                <value>
                    <fullName>TM3</fullName>
                </value>
                <value>
                    <fullName>PMI</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>UA</fullName>
                </value>
                <value>
                    <fullName>ACR</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>UAG</fullName>
                </value>
                <value>
                    <fullName>AMP</fullName>
                </value>
                <value>
                    <fullName>APH</fullName>
                </value>
                <value>
                    <fullName>ARC</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BAR</fullName>
                </value>
                <value>
                    <fullName>BLL</fullName>
                </value>
                <value>
                    <fullName>ZL2</fullName>
                </value>
                <value>
                    <fullName>D79</fullName>
                </value>
                <value>
                    <fullName>BQK</fullName>
                </value>
                <value>
                    <fullName>ZBR</fullName>
                </value>
                <value>
                    <fullName>ZBC</fullName>
                </value>
                <value>
                    <fullName>ZFD</fullName>
                </value>
                <value>
                    <fullName>ZCG</fullName>
                </value>
                <value>
                    <fullName>ZDC</fullName>
                </value>
                <value>
                    <fullName>ZPM</fullName>
                </value>
                <value>
                    <fullName>ZPP</fullName>
                </value>
                <value>
                    <fullName>ZUS</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Staging_Record_Type__c</fullName>
        <description>Staging record type for the Product Staging record.</description>
        <label>Staging Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Standard_price__c</fullName>
        <description>Standard price for the Product Staging record</description>
        <label>Standard price</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_brand__c</fullName>
        <description>Sub brand for the Product Staging record</description>
        <label>Sub-brand</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Cappuccino_Tax_Mixed__c</fullName>
        <label>TXP Cappuccino Tax Mixed</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Chocolate_Tax__c</fullName>
        <label>TXP Chocolate Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Coffee_Tax__c</fullName>
        <label>TXP Coffee Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Disposable_Tableware__c</fullName>
        <label>TXP Disposable Tableware</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Disposal_Fee__c</fullName>
        <label>TXP Disposal Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Instant_Coffee_Tax__c</fullName>
        <label>TXP Instant Coffee Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Liquid_Coffee_Tax__c</fullName>
        <label>TXP Liquid Coffee Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Recycle_Con_Pack_Tax__c</fullName>
        <label>TXP Recycle/Pack Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_TXP_Tea_Tax__c</fullName>
        <label>TXP Tea Tax</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_per_UOM__c</fullName>
        <label>Tax per UOM</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price item is taxable</description>
        <inlineHelpText>Indicates whether the price item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Type_of_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type of Contract</label>
        <referenceTo>Apttus_Config2__ProductAttributeValue__c</referenceTo>
        <relationshipLabel>Pricing Stagings</relationshipLabel>
        <relationshipName>Pricing_Stagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Uom__c</fullName>
        <description>Unit of measure for the Product Staging record.</description>
        <label>Uom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_DRKS</fullName>
                    <label>Drinks</label>
                </value>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>%O</fullName>
                    <isActive>false</isActive>
                    <label>%O</label>
                </value>
                <value>
                    <fullName>22S</fullName>
                    <isActive>false</isActive>
                    <label>22S</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <isActive>false</isActive>
                    <label>23</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <isActive>false</isActive>
                    <label>28</label>
                </value>
                <value>
                    <fullName>2J</fullName>
                    <isActive>false</isActive>
                    <label>2J</label>
                </value>
                <value>
                    <fullName>2M</fullName>
                    <isActive>false</isActive>
                    <label>2M</label>
                </value>
                <value>
                    <fullName>2X</fullName>
                    <isActive>false</isActive>
                    <label>2X</label>
                </value>
                <value>
                    <fullName>2Z</fullName>
                    <isActive>false</isActive>
                    <label>2Z</label>
                </value>
                <value>
                    <fullName>3B</fullName>
                    <isActive>false</isActive>
                    <label>3B</label>
                </value>
                <value>
                    <fullName>4G</fullName>
                    <isActive>false</isActive>
                    <label>4G</label>
                </value>
                <value>
                    <fullName>4H</fullName>
                    <isActive>false</isActive>
                    <label>4H</label>
                </value>
                <value>
                    <fullName>4K</fullName>
                    <isActive>false</isActive>
                    <label>4K</label>
                </value>
                <value>
                    <fullName>4O</fullName>
                    <isActive>false</isActive>
                    <label>4O</label>
                </value>
                <value>
                    <fullName>4T</fullName>
                    <isActive>false</isActive>
                    <label>4T</label>
                </value>
                <value>
                    <fullName>59</fullName>
                    <isActive>false</isActive>
                    <label>59</label>
                </value>
                <value>
                    <fullName>A87</fullName>
                    <isActive>false</isActive>
                    <label>A87</label>
                </value>
                <value>
                    <fullName>A93</fullName>
                    <isActive>false</isActive>
                    <label>A93</label>
                </value>
                <value>
                    <fullName>A97</fullName>
                    <isActive>false</isActive>
                    <label>A97</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_VAT_Indicator__c</fullName>
        <label>VAT Indicator</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_currencycode__c</fullName>
        <label>currencycode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delm__c</fullName>
        <label>delm</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Pricing Staging</label>
    <listViews>
        <fullName>PCUT_Pricing_Staging_ProcessedWithErrors</fullName>
        <columns>NAME</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Process_Status__c</field>
            <operation>equals</operation>
            <value>Processed with Errors</value>
        </filters>
        <label>PCUT Pricing Staging ProcessedWithErrors</label>
    </listViews>
    <listViews>
        <fullName>Prices_for_81008547</fullName>
        <columns>NAME</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PCUT Pricing Staging</label>
    </listViews>
    <listViews>
        <fullName>Prices_for_Bundles_in_Pricing_Batch</fullName>
        <columns>NAME</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Calculation_Type__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Product_Code__c</field>
            <operation>startsWith</operation>
            <value>59</value>
        </filters>
        <label>Prices for Bundles in Pricing Batch</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pricing_Staging_Records_Created_Today</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Product_Code__c</field>
            <operation>equals</operation>
            <value>81009012</value>
        </filters>
        <label>All PricingStaging - Created PCUT 17/01</label>
    </listViews>
    <listViews>
        <fullName>Pricing_Staging_for_4008514_4008773_4008</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_Effective_Date__c</columns>
        <columns>APTS_Expiration_Date__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Product_Code__c</field>
            <operation>equals</operation>
            <value>4008514</value>
        </filters>
        <label>Pricing Staging for 4008514 4008773 4008</label>
    </listViews>
    <listViews>
        <fullName>Tax_Fields</fullName>
        <columns>NAME</columns>
        <columns>APTS_IsActive__c</columns>
        <columns>APTS_Calculation_Type__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Configuration_Type__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_Description__c</columns>
        <columns>APTS_Process_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tax Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unmatched_YRFO_Prices</fullName>
        <columns>NAME</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_Calculation_Type__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Product_Code__c</field>
            <operation>equals</operation>
            <value>81174143</value>
        </filters>
        <label>pricing staging created today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X81172336</fullName>
        <columns>NAME</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>APTS_Cross_plant_material_status__c</columns>
        <columns>APTS_Configuration_Type__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Distribution_channel__c</columns>
        <columns>APTS_Effective_Date__c</columns>
        <columns>APTS_Effective_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Product_Code__c</field>
            <operation>equals</operation>
            <value>81172336</value>
        </filters>
        <filters>
            <field>APTS_Sales_Organization__c</field>
            <operation>equals</operation>
            <value>0111</value>
        </filters>
        <label>e</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Z610</fullName>
        <columns>NAME</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Configuration_Type__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Condition_Type__c</field>
            <operation>equals</operation>
            <value>Z610</value>
        </filters>
        <filters>
            <field>APTS_Process_Status__c</field>
            <operation>equals</operation>
            <value>Unmatched</value>
        </filters>
        <label>Z610</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Z_COT2_PK_Decimal_issue</fullName>
        <columns>NAME</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_SAP_ListPriceUnits__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Z COT2 PK Decimal issue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>lavanya</fullName>
        <columns>NAME</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_Effective_Date__c</columns>
        <columns>APTS_Expiration_Date__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Product_Code__c</field>
            <operation>equals</operation>
            <value>81007914</value>
        </filters>
        <filters>
            <field>APTS_Condition_Type__c</field>
            <operation>equals</operation>
            <value>YRF0</value>
        </filters>
        <label>Defect 22008 more</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>z_Defect_16689</fullName>
        <columns>NAME</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Price_Uom__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Price_Uom__c</field>
            <operation>equals</operation>
            <value>SAP_BX</value>
        </filters>
        <label>Pricing Staging = PriceUOM=Box</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>z_Pricing_Staging_1_FrequencyIssue</fullName>
        <columns>NAME</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_IsActive__c</columns>
        <columns>APTS_Calculation_Type__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>APTS_Price_Uom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Price_Uom__c</field>
            <operation>equals</operation>
            <value>SAP_CS</value>
        </filters>
        <label>z Pricing Staging . - 1.FrequencyIssue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>z_SAPPO_16Jul_ExpainingPriceDiffs</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Price_Uom__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Effective_Date__c</columns>
        <columns>APTS_Expiration_Date__c</columns>
        <columns>APTS_PLI_Unique_Identifier__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>2/18/2019 12:00 AM</value>
        </filters>
        <label>z PricingStagingrecordsforFixedTermProdu</label>
    </listViews>
    <listViews>
        <fullName>z_SAPPO_All_Products</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>APTS_Process_Status__c</columns>
        <columns>APTS_Product_Code__c</columns>
        <columns>APTS_Sales_Organization__c</columns>
        <columns>APTS_Condition_Type__c</columns>
        <columns>APTS_Cost_Price_Unit__c</columns>
        <columns>APTS_Contract_Period__c</columns>
        <columns>APTS_Calculation_Type__c</columns>
        <columns>APTS_List_Price__c</columns>
        <columns>APTS_Price_Uom__c</columns>
        <columns>APTS_SAP_Deletion_Indicator__c</columns>
        <columns>APTS_SAP_ListPriceUnits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Process_Status__c</field>
            <operation>equals</operation>
            <value>Unmatched</value>
        </filters>
        <label>z SAPPO All Unmatched Pricing Staging</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000000000}</displayFormat>
        <label>Pricing Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>